--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -99,7 +99,7 @@
                     <mat-form-field class="example-full-width mb-0 ">
                         <mat-label>Balance</mat-label>
                         <div class="d-flex">
-                            <input matInput style="color:red" type="number" min="0"  name="Balance" [(ngModel)]="BillMaster.DueAmount" disabled>
+                            <input matInput class="redclass" style="color: red !important;"  type="number" min="0"  name="Balance" [(ngModel)]="BillMaster.DueAmount" disabled>
                             <span *ngIf="BillMaster.PaymentStatus == 'Paid' && BillMaster.DueAmount == 0" style="border: 1px solid; padding: 0px 2px; color:green; font-weight: 600; font-size: 12px;">Paid</span>
                             <span *ngIf="BillMaster.PaymentStatus == 'Unpaid' || BillMaster.DueAmount != 0"style=" border: 1px solid; padding: 0px 2px; color: red; font-weight: 600; font-size: 12px; ">Unpaid</span>
                         </div>
@@ -107,12 +107,12 @@
                 </div>
                 <div class="col-xl-1 col-lg-1 col-md-3 col-4 pt-3">
                     <mat-slide-toggle name="Preorder" color="primary" [(ngModel)]="BillItem.PreOrder"
-                        class="example-margin" #Multiplecontrol style="color:#ff651e;">
+                        class="example-margin" #Multiplecontrol style="color:#ff651e;" [disabled]="BillItem.Manual === true">
                         Preorder</mat-slide-toggle>
                 </div>
                 <div class="col-xl-1 col-lg-1 col-md-3 col-4 pt-3">
                     <mat-slide-toggle name="Manual" color="primary" [(ngModel)]="BillItem.Manual" class="example-margin"
-                        #Manualcontrol style="color:#ff651e;">Manual</mat-slide-toggle>
+                        #Manualcontrol style="color:#ff651e;" [disabled]="BillItem.PreOrder === true">Manual</mat-slide-toggle>
                 </div>
                 <div class="col-xl-1 col-lg-1 col-md-3 col-4 p-0 pt-3" >
                     <mat-slide-toggle name="WholeSale" color="primary" [(ngModel)]="BillItem.WholeSale"
@@ -561,7 +561,7 @@
                                    </button>
 
                                     <button *ngIf="data.ID != null" class="bgRemove p-0 ms-1"  (click)="OrderPrint(data)" >
-                                    <mat-icon  class="deletes_icon  " title="Order Form">print</mat-icon>
+                                    <mat-icon  class="pritn_icon  " title="Order Form">print</mat-icon>
                                    </button>
                                    
                                     <mat-icon *ngIf="data.Status !== 0" class="edit_icon ms-1" (click)="openModal(content,data)"  >remove_red_eye</mat-icon>
@@ -723,7 +723,7 @@
                     </table>
                 </div>
             </div>
-            <div class="row">
+            <div class="row pt-3 mb-3" style="border: 2px solid #0000005c;">
                 <div class="col-xl-1 col-lg-1 col-md-2 col-4 mb-0 ">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label class="cus-label">Quantity</mat-label>
@@ -737,7 +737,7 @@
                 <div class="col-xl-1 col-lg-1 col-md-2 col-4 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label class="cus-label">Sub Total</mat-label>
-                        <input matInput class="cust-input" type="number" min="0" name="SubTotal" [(ngModel)]="BillMaster.SubTotal" disabled
+                        <input style=" color: red !important;" matInput class="cust-input redclass" type="number" min="0" name="SubTotal" [(ngModel)]="BillMaster.SubTotal" disabled
                             #SubTotaltcontrol [autocomplete]="false">
                         <mat-error>
                             Sub Total is required
@@ -807,21 +807,21 @@
                 <div class="col-xl-1 col-lg-1 col-md-2 col-4 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Grand Amount</mat-label>
-                        <input matInput name="TotalAmount" type="number" min="0" [(ngModel)]="BillMaster.TotalAmount" disabled>
+                        <input class="redclass" style="color: red !important;" matInput name="TotalAmount" type="number" min="0" [(ngModel)]="BillMaster.TotalAmount" disabled>
                     </mat-form-field>
                 </div>
                 <div class="col-xl-1 col-lg-1 col-md-2 col-4 mb-0">
                     <mat-form-field class="example-full-width mb-0">
                         <mat-label>Round Off</mat-label>
-                        <input matInput name="RoundOff" type="number" min="0" [(ngModel)]="BillMaster.RoundOff" disabled>
+                        <input class="redclass" style="color: red !important;" matInput name="RoundOff" type="number" min="0" [(ngModel)]="BillMaster.RoundOff" disabled>
                     </mat-form-field>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-12">
-                    <button *ngIf="this.id2 == 0" type="button" class="me-3" mat-raised-button color="primary" (click)="onSubmit(content1)" [disabled]="(billItemList?.length === 0 && serviceLists?.length === 0) || BillMaster.ID !== null" >Save</button>
+                    <button *ngIf="this.id2 == 0" type="button" class="me-3" mat-raised-button color="primary" (click)="onSubmit(content1);AddDiscalculate('AddlDiscountPercentage', 'discount')" [disabled]="(billItemList?.length === 0 && serviceLists?.length === 0) || BillMaster.ID !== null" >Save</button>
                     <button *ngIf="this.id2 != 0" type="button" class="me-3" mat-raised-button color="primary"
-                     [disabled]="BillMaster.ID === null" (click)="update()">Update</button>
+                     [disabled]="BillMaster.ID === null" (click)="update();AddDiscalculate('AddlDiscountPercentage', 'discount')">Update</button>
                      <button type="button" class=" me-3" mat-raised-button color="primary"
                      [disabled]="BillMaster.ID === null" (click)="openModal1(content1)">Payment</button>
                      <button type="button" class=" me-3" mat-raised-button color="primary"
@@ -829,15 +829,17 @@
                      <button type="button" class=" me-3" mat-raised-button color="primary"
                      [disabled]="BillMaster.ID === null" (click)="openModal13(content13)">Fitter Order</button>
                     <button type="button" mat-raised-button color="primary" (click)="billPrint('Receipt')">Receipt</button>
-                    <button type="button" class="me-3 ms-3" mat-raised-button color="primary"(click)="billPrint('Invoice')">Invoice</button>
-                    <mat-slide-toggle name="ShowPower" color="primary" [(ngModel)]="ShowPower" class="example-margin" #ShowPowercontrol>Show Power</mat-slide-toggle>
-                    <button type="button"  mat-raised-button color="primary">Receipt +
+                    <button type="button" class="me-3 ms-3" mat-raised-button color="primary" (click)="billPrint('Invoice')">Invoice</button>
+                    <button type="button"  mat-raised-button color="primary">
+                        <mat-slide-toggle name="ShowPower" color="primary" [(ngModel)]="ShowPower" class="example-margin" #ShowPowercontrol>Show Power</mat-slide-toggle>
+                    </button>
+                    <!-- <button type="button"  mat-raised-button color="primary">Receipt +
                         Power</button>
 
                     <button type="button" class="me-3 ms-3" mat-raised-button color="primary">Invoice +
-                        Power</button>
-                    <button type="button" mat-raised-button color="primary"> Whatsapp</button>
-                    <button type="button" class="me-3 ms-3" mat-raised-button color="primary">Email</button>
+                        Power</button> -->
+                    <button type="button" mat-raised-button color="primary" class="me-3 ms-3"> Whatsapp</button>
+                    <button type="button"  mat-raised-button color="primary">Email</button>
                 </div>
             </div>
         </form>
@@ -1156,7 +1158,7 @@
                             <button type="submit" [disabled]="f3.invalid || this.applyPayment.PaymentMode === 0" mat-raised-button color="primary">Apply Payment</button>
                         </div>
                         <div class="col-xl-3 col-lg-3 col-md-4 col-8 ps-md-4 ps-md-0">
-                            <button  [disabled]="applyPayment.CustomerCredit === 0"  type="button"  mat-raised-button color="primary">
+                            <button (click)="CreditNotePdf()" [disabled]="applyPayment.CustomerCredit === 0"  type="button"  mat-raised-button color="primary">
                                 Credit Note
                             </button>
                             <button class="whatsapp ms-lg-4 me-lg-4 ms-3 me-3"><i class="fa-brands fa-whatsapp" ></i></button>
